refactor: Update Theme to match invites

--- a/docs/index.css
+++ b/docs/index.css
@@ -1,5 +1,5 @@
 :root {
-  --theme-primary: #2eb8b8;
+  --theme-primary: #26a2a8;
   --theme-accent: #FFDF00;
   --theme-warn: orange;
   --theme-background: #fff;
